--- a/app/src/main/res/layout/activity_current_image.xml
+++ b/app/src/main/res/layout/activity_current_image.xml
@@ -7,12 +7,13 @@
     android:orientation="vertical"
     tools:context=".CurrentImageActivity">
 
+
     <FrameLayout
         android:id="@+id/fl_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"/>
-
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_marginBottom="0dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -38,7 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="@string/todo"
         android:src="@mipmap/ic_launcher" />
 
     <Button
