--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,40 +8,33 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btnCamera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/takePictureButton"
+        style="@style/Theme.PhotoEditor.Button"
+        android:layout_marginStart = "32dp"
+        android:layout_marginEnd = "16dp"
+        android:layout_marginTop = "16dp"
         android:background="@drawable/button_border"
-        android:drawableLeft="@drawable/ic_photo"
-        android:fontFamily="sans-serif-medium"
-        android:text="Камера"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="@string/take_picture_button"
+        app:icon="@drawable/ic_photo"
+        app:iconTint = "@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/choosePictureButton"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-        android:id="@+id/btnGallery"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:layout_toStartOf="@+id/imageView"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/choosePictureButton"
+        style="@style/Theme.PhotoEditor.Button"
+        android:layout_marginStart = "16dp"
+        android:layout_marginEnd = "32dp"
+        android:layout_marginTop = "16dp"
         android:background="@drawable/button_border"
-        android:drawableLeft="@drawable/ic_folder"
-        android:fontFamily="sans-serif-medium"
-        android:text="Галерея"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="@string/choose_picture_button"
+        app:icon="@drawable/ic_folder"
+        app:iconTint = "@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@id/takePictureButton"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
         android:id="@+id/imageView"
