--- a/app/src/main/res/layout/activity_rotate.xml
+++ b/app/src/main/res/layout/activity_rotate.xml
@@ -7,49 +7,27 @@
     tools:context = ".RotateActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:minHeight="80dp"
-        android:paddingStart="12dp"
-        android:theme="?attr/actionBarTheme"
+        android:id="@+id/rotationToolbar"
+        style="@style/Theme.PhotoEditor.Header.Effect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_back_button"
-        app:title="Поворот"
-        app:titleMargin="0dp"
-        app:titleTextColor="@color/black" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="32dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="379dp" />
+        app:title="@string/first_task_name"
+        app:navigationIcon="@drawable/ic_back_button"/>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/rotationImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toBottomOf="@+id/rotationToolbar"
+        android:contentDescription="@string/rotation_image_desc" />
 
     <EditText
-        android:id="@+id/editTextNumberDecimal"
+        android:id="@+id/rotationAnglePicker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -57,31 +35,22 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="Угол поворота"
+        android:hint="@string/rotation_angle_hint"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/rotationImage"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:id="@+id/applyRotationButton"
+        style="@style/Theme.PhotoEditor.Button.Accent"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:background="@color/white"
-        android:fontFamily="sans-serif"
-        android:text="Применить"
-        android:textAllCaps="true"
-        android:textColor="@color/accent"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        android:typeface="normal"
-        app:backgroundTint="#FFFFFF"
-        app:cornerRadius="20dp"
+        android:text="@string/apply_button"
+        app:iconTint = "@color/accent"
+        app:backgroundTint="@color/buttonBackground"
         app:icon="@drawable/ic_check"
-        app:iconTint="@color/accent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />
+        app:layout_constraintTop_toBottomOf="@+id/rotationAnglePicker" />
 </androidx.constraintlayout.widget.ConstraintLayout>
