--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,43 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PhotoEditor" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.PhotoEditor" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/accent</item>
+        <item name="colorPrimaryVariant">@color/accent</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/accent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name = "Theme.PhotoEditor.Button">
+        <item name = "android:layout_width">0dp</item>
+        <item name = "android:layout_height">48dp</item>
+        <item name = "android:background">@color/buttonBackground</item>
+        <item name = "android:fontFamily">sans-serif</item>
+        <item name = "android:textAllCaps">true</item>
+        <item name = "android:textColor">@color/black</item>
+        <item name = "android:textSize">14sp</item>
+    </style>
+
+    <style name = "Theme.PhotoEditor.Button.Accent">
+        <item name = "android:textColor">@color/accent</item>
+    </style>
+
+    <style name = "Theme.PhotoEditor.Header">
+        <item name = "android:layout_width">match_parent</item>
+        <item name = "android:layout_height">80dp</item>
+        <item name = "android:minHeight">80dp</item>
+        <item name = "android:background">@color/headerBackground</item>
+        <item name = "android:textSize">24sp</item>
+        <item name = "android:titleTextColor">@color/black</item>
+    </style>
+
+    <style name = "Theme.PhotoEditor.Header.Effect">
+        <item name = "android:paddingStart">12dp</item>
     </style>
 </resources>
