--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,13 @@
     <color name="black">#FF263238</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name = "accent">#FF0E4DA4</color>
-    <color name = "headerBackground">@color/white</color>
-    <color name = "bottomNavigationBackground">#FFF0F0F0</color>
-    <color name = "bottomNavigationItemColor">#FF6E6E6E</color>
-    <color name = "buttonBackground">@color/white</color>
+    <color name="accent">#FF0E4DA4</color>
+    <color name="headerBackground">@color/white</color>
+    <color name="bottomNavigationBackground">#FFF0F0F0</color>
+    <color name="bottomNavigationItemColor">#FF6E6E6E</color>
+    <color name="buttonBackground">@color/white</color>
+    <color name="light_blue_400">#FF29B6F6</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="gray_400">#FFBDBDBD</color>
+    <color name="gray_600">#FF757575</color>
 </resources>
