--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -26,7 +26,7 @@
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/takePictureButton" />
+        app:layout_constraintTop_toBottomOf="@+id/imageSectionHeader" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/takePictureButton"
@@ -40,7 +40,7 @@
         app:iconTint="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/choosePictureButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageSectionHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/currentImage" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/choosePictureButton"
@@ -54,6 +54,6 @@
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/takePictureButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageSectionHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/currentImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
