--- a/app/src/main/res/layout/activity_cube.xml
+++ b/app/src/main/res/layout/activity_cube.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".CubeActivity">
 
-    <TextView
-        android:id="@+id/textView4"
+<!--    <com.example.photoeditor.MyCube-->
+<!--        android:id="@+id/canvasCube"-->
+<!--        android:layout_width="410dp"-->
+<!--        android:layout_height="460dp"-->
+<!--        android:layout_marginTop="56dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <Button
+        android:id="@+id/rotateA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CubeActivity"
+        android:layout_marginBottom="76dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
