--- a/app/src/main/res/layout/activity_rotation.xml
+++ b/app/src/main/res/layout/activity_rotation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context = ".RotationActivity">
+    tools:context=".RotationActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/rotationToolbar"
@@ -13,13 +13,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_back_button"
-        app:title="@string/first_task_name"/>
+        app:title="@string/first_task_name" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/rotationToolbar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rotationToolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -28,15 +28,15 @@
 
             <ImageView
                 android:id="@+id/rotationImage"
+                style="@style/imagePreviewOnEffect"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:background="#E91E63"
                 android:contentDescription="@string/rotation_image_desc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/rotationAnglePicker"
@@ -52,7 +52,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rotationImage"/>
+                app:layout_constraintTop_toBottomOf="@+id/rotationImage" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/applyRotationButton"
@@ -62,7 +62,7 @@
                 android:text="@string/apply_button"
                 app:backgroundTint="@color/buttonBackground"
                 app:icon="@drawable/ic_check"
-                app:iconTint = "@color/accent"
+                app:iconTint="@color/accent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rotationAnglePicker" />
 
