Переделал масштабирование на правильное
До этого был обычный zoom изображения, теперь переделал на масштабирование.
Добавил:
1) Базовую реализацию масштабирования
2) Зафиксировал размер фоток на save фрагменте.

--- a/app/src/main/res/layout/activity_scaling.xml
+++ b/app/src/main/res/layout/activity_scaling.xml
@@ -18,16 +18,31 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
 
-    <SeekBar
-        android:id="@+id/seekBarScaling"
-        android:layout_width="match_parent"
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBarScaling"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="32dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:max="99"-->
+<!--        android:textAlignment="center"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imageViewScaling" />-->
+    <EditText
+        android:id="@+id/EditTextScaling"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:max="99"
-        android:textAlignment="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:hint="@string/resize_koef"
+        android:inputType="numberDecimal"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewScaling" />
 
@@ -41,5 +56,5 @@
         android:text="@string/apply_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarScaling" />
+        app:layout_constraintTop_toBottomOf="@+id/EditTextScaling" />
 </androidx.constraintlayout.widget.ConstraintLayout>
