--- a/app/src/main/res/layout/activity_segmentation.xml
+++ b/app/src/main/res/layout/activity_segmentation.xml
@@ -6,12 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".SegmentationActivity">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SegmentationActivity"
+    <ImageView
+        android:id="@+id/imageViewSegmentation"
+        style="@style/imagePreviewOnEffect"
+        android:layout_width="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonSegmentationApply"
+        style="@style/Theme.PhotoEditor.Button.Accent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/apply_button"
+        app:backgroundTint="@color/buttonBackground"
+        app:icon="@drawable/ic_check"
+        app:iconTint="@color/accent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewSegmentation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
