--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -16,44 +16,55 @@
         app:title="@string/image_section_header"
         app:titleMarginStart="32dp" />
 
-    <ImageView
-        android:id="@+id/currentImage"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:src="@mipmap/ic_launcher"
-        android:background="@color/teal_700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageSectionHeader"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageSectionHeader">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/takePictureButton"
-        style="@style/Theme.PhotoEditor.Button"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/button_border"
-        android:text="@string/take_picture_button"
-        app:icon="@drawable/ic_photo"
-        app:iconTint="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/choosePictureButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentImage" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="16dp">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/choosePictureButton"
-        style="@style/Theme.PhotoEditor.Button"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/button_border"
-        android:text="@string/choose_picture_button"
-        app:icon="@drawable/ic_folder"
-        app:iconTint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/takePictureButton"
-        app:layout_constraintTop_toBottomOf="@+id/currentImage" />
+            <ImageView
+                android:id="@+id/currentImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/takePictureButton"
+                style="@style/Theme.PhotoEditor.Button"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/button_border"
+                android:text="@string/take_picture_button"
+                app:icon="@drawable/ic_photo"
+                app:iconTint="@color/black"
+                app:layout_constraintEnd_toStartOf="@+id/choosePictureButton"
+                app:layout_constraintStart_toStartOf="@+id/currentImage"
+                app:layout_constraintTop_toBottomOf="@+id/currentImage" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/choosePictureButton"
+                style="@style/Theme.PhotoEditor.Button"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/button_border"
+                android:text="@string/choose_picture_button"
+                app:icon="@drawable/ic_folder"
+                app:iconTint="@color/black"
+                app:layout_constraintEnd_toEndOf="@+id/currentImage"
+                app:layout_constraintStart_toEndOf="@id/takePictureButton"
+                app:layout_constraintTop_toBottomOf="@+id/currentImage" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
