--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -18,8 +18,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/saveSectionHeader">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/saveSectionHeader"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -42,12 +43,11 @@
                 style="@style/Theme.PhotoEditor.Button"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
                 android:background="@drawable/button_border"
                 android:text="@string/save_picture_button"
                 app:icon="@drawable/ic_folder"
                 app:iconTint="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/resultImage"
                 app:layout_constraintTop_toBottomOf="@+id/resultImage" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
