Удалил стиль у ImageView
Стиль не существует, поэтому удалил его

--- a/app/src/main/res/layout/activity_unsharp_mask.xml
+++ b/app/src/main/res/layout/activity_unsharp_mask.xml
@@ -29,8 +29,8 @@
 
             <ImageView
                 android:id="@+id/unsharpImage"
-                style="@style/imagePreviewOnEffect"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:contentDescription="@string/rotation_image_desc"
