--- a/app/src/main/res/layout/activity_retouching.xml
+++ b/app/src/main/res/layout/activity_retouching.xml
@@ -4,77 +4,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context=".RetouchingActivity">
+
+    <SeekBar
+        android:id="@+id/seekBarCoef"
+        style="@style/MySeekBar"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.141"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewRetouching"
         style="@style/imagePreviewOnEffect"
         android:layout_width="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarRadius"
+        app:layout_constraintEnd_toEndOf="@+id/acceptChanging"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/seekBarRadius"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <SeekBar
         android:id="@+id/seekBarRadius"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBarCoef"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSeekBarRadius"
-        app:layout_constraintVertical_bias="0.32" />
-
-    <SeekBar
-        android:id="@+id/seekBarCoef"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textSeekBarCoef"
-        android:layout_width="wrap_content"
+        style="@style/MySeekBar"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="TextView"
+        android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/seekBarCoef"
         app:layout_constraintEnd_toEndOf="@+id/seekBarCoef"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/seekBarCoef"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarRadius" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textSeekBarRadius"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="TextView"
+        android:text="RADIUS"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarRadius"
         app:layout_constraintEnd_toEndOf="@+id/seekBarRadius"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="@+id/seekBarRadius"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewRetouching" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewRetouching"
+        app:layout_constraintVertical_bias="0.75" />
 
-    <Button
+    <TextView
+        android:id="@+id/textSeekBarCoef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STRENGTH"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarCoef"
+        app:layout_constraintEnd_toEndOf="@+id/seekBarCoef"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="@+id/seekBarCoef"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarRadius"
+        app:layout_constraintVertical_bias="0.564" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/acceptChanging"
+        style="@style/Theme.PhotoEditor.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="accept"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="575dp" />
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_border"
+        android:text="Применить"
+        app:layout_constraintBottom_toBottomOf="@+id/seekBarRadius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toEndOf="@+id/seekBarRadius"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewRetouching"
+        app:strokeColor="#E8E8E8" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/cancelChanging"
-        android:layout_width="wrap_content"
+        style="@style/Theme.PhotoEditor.Button"
+        android:layout_width = "0dp"
         android:layout_height="wrap_content"
-        android:text="Cancel"
-        tools:layout_editor_absoluteX="283dp"
-        tools:layout_editor_absoluteY="661dp" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_border"
+        android:text="Отменить"
+        app:layout_constraintBottom_toBottomOf="@+id/seekBarCoef"
+        app:layout_constraintEnd_toEndOf="@+id/acceptChanging"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/acceptChanging"
+        app:layout_constraintTop_toBottomOf="@+id/acceptChanging" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
